[package]
authors    =["Thor Kampefner <thorck@pm.me>"]
description="""personal cryptography playground"""
edition    ="2021"
license    ="Apache2.0 OR MIT"
name       ="crypto"
repository ="https://github.com/thor314/crypto"
version    ="0.1.0"

[dependencies]
anyhow   ="1.0"
cute = "0.3.0"
log       ="0.4" 


[dev-dependencies]
rstest    ="0.18"         # testing convenience proc-macros
env_logger="0.11"
