[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Thor Kampefner <thorck@pm.me>"]
description = "personal cryptography playground"

[workspace]
members = [
  "algebra",
]

[workspace.dependencies]
# serde = "1.0"
# tokio = { version = "1.0", features = ["full"] }
anyhow    ="1.0"
log       ="0.4" 

[workspace.dev-dependencies]
rstest    ="0.18"
env_logger="0.11"
